--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: WarBringerLT
-custom: ["https://www.paypal.me/WarBringerLT", PayPal]
+custom: ["https://www.paypal.me/WarBringerLT"]
